# keepsake

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.relay  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/ui/: app.js  bip39.js  index.html  output.css
apps/desktop/ui/src/: input.css
crates/keepsake-backup/: Cargo.toml
crates/keepsake-backup/src/: lib.rs
crates/keepsake-cli/: Cargo.toml
crates/keepsake-cli/src/: main.rs
crates/keepsake-core/: Cargo.toml
crates/keepsake-core/src/: lib.rs
crates/keepsake-crypto/: Cargo.toml
crates/keepsake-crypto/examples/: dump_wordlist.rs
crates/keepsake-crypto/src/: lib.rs  quickunlock.rs
crates/keepsake-daemon/: Cargo.toml
crates/keepsake-daemon/src/: lib.rs  main.rs
crates/keepsake-desktop-core/: Cargo.toml
crates/keepsake-desktop-core/examples/: offline_check.rs
crates/keepsake-desktop-core/src/: lib.rs  quickunlock.rs
crates/keepsake-firewall/: Cargo.toml
crates/keepsake-firewall/src/: lib.rs
crates/keepsake-graph/: Cargo.toml
crates/keepsake-graph/src/: lib.rs
crates/keepsake-import/: Cargo.toml
crates/keepsake-import/examples/: scan_claude.rs
crates/keepsake-import/src/: lib.rs
crates/keepsake-mcp/: Cargo.toml
crates/keepsake-mcp/src/: lib.rs  main.rs
crates/keepsake-proxy/: Cargo.toml
crates/keepsake-proxy/src/: lib.rs  main.rs
crates/keepsake-relay/: Cargo.toml
crates/keepsake-relay/src/: lib.rs  main.rs
crates/keepsake-retrieval/: Cargo.toml
crates/keepsake-retrieval/examples/: warm_model.rs
crates/keepsake-retrieval/src/: lib.rs
crates/keepsake-store-sqlite/: Cargo.toml
crates/keepsake-store-sqlite/src/: lib.rs
crates/keepsake-sync/: Cargo.toml
crates/keepsake-sync/src/: lib.rs
crates/keepsake-vault/: Cargo.toml
crates/keepsake-vault/src/: lib.rs
docs/design/: 2026-06-25-compact-graph-recall.md
docs/research/: memory-system-reference-board.md
docs/superpowers/plans/: 2026-07-02-keepsake-premium-product-ui-pass.md
launch/: hacker_news.txt  reddit_post.txt  x_launch_thread.txt
