[package]
name = "keepsake-crypto"
version = "0.0.0"
description = "Keepsake crypto core: BIP-39 -> HKDF roots, random-DEK envelope encryption, cryptographic erasure."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bip39 = "2"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ml-dsa = "0.1"
ml-kem = "0.2"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
