[package]
name = "keepsake-firewall"
version = "0.0.0"
description = "Keepsake Context-Firewall: Privacy Dial, PII redaction, and tamper-evident Memory Receipts."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hmac = "0.12"
sha2 = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
