[package]
name = "keepsake-mcp"
version = "0.0.0"
description = "Keepsake MCP surface: the eight saihm_* tools dispatching to a sovereign MemoryVault."
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "keepsake-mcp"
path = "src/main.rs"

[dependencies]
keepsake-crypto = { path = "../keepsake-crypto" }
keepsake-core = { path = "../keepsake-core" }
keepsake-store-sqlite = { path = "../keepsake-store-sqlite" }
keepsake-retrieval = { path = "../keepsake-retrieval" }
keepsake-vault = { path = "../keepsake-vault" }
keepsake-firewall = { path = "../keepsake-firewall" }
keepsake-daemon = { path = "../keepsake-daemon" }
serde_json = "1"
hex = "0.4"
tokio = { version = "1", features = ["rt", "net", "io-util", "time"] }

[dev-dependencies]
tempfile = "3"
